Fix regexp for detecting OCaml version
The current regexp has 'false positives' when the OCaml compiler is
installed in a patch containing 'version '. Fix this by using a
more constrained regexp. The new regexp should capture both
'The OCaml compiler, version NNN' (current text)
and
'The Objective Caml compiler, version NNN' (previously used)

Fixes #96

--- a/configure.in
+++ b/configure.in
@@ -44,7 +44,7 @@ if test "$OCAMLC" = no ; then
 fi
 
 # we extract Ocaml version number and library path
-OCAMLVERSION=`$OCAMLC -v | sed -n -e 's|.*version *\(.*\)$|\1|p' `
+OCAMLVERSION=`$OCAMLC -v | sed -n -e 's|The O.*, version *\(.*\)$|\1|p' `
 echo "ocaml version is $OCAMLVERSION"
 
 case $OCAMLVERSION in
