--- a/ocamlgraph.opam
+++ b/ocamlgraph.opam
@@ -1,5 +1,6 @@
 opam-version: "2.0"
 synopsis: "A generic graph library for OCaml"
+description: "Provides both graph data structures and graph algorithms"
 maintainer: ["filliatr@lri.fr"]
 authors: ["Sylvain Conchon" "Jean-Christophe Filliâtre" "Julien Signoles"]
 license: "LGPL-2.1-only"
