ocamlgraph 2.0.0 requires OCaml >= 4.03.0
and tests require graphics

--- a/ocamlgraph_gtk.opam
+++ b/ocamlgraph_gtk.opam
@@ -17,12 +17,13 @@ tags: [
 homepage: "https://github.com/backtracking/ocamlgraph/"
 bug-reports: "https://github.com/backtracking/ocamlgraph/issues/new"
 depends: [
-  "ocaml"
+  "ocaml" {>= "4.03.0"}
   "stdlib-shims"
   "lablgtk"
   "conf-gnomecanvas"
   "ocamlgraph"
   "dune" {>= "2.0"}
+  "graphics" {with-test}
 ]
 build: [
   ["dune" "subst"] {pinned}
