--- a/ocamlgraph.opam
+++ b/ocamlgraph.opam
@@ -17,9 +17,10 @@ tags: [
 homepage: "https://github.com/backtracking/ocamlgraph/"
 bug-reports: "https://github.com/backtracking/ocamlgraph/issues/new"
 depends: [
-  "ocaml"
+  "ocaml" {>= "4.03.0"}
   "stdlib-shims"
   "dune" {>= "2.0"}
+  "graphics" {with-test}
 ]
 build: [
   ["dune" "subst"] {pinned}
