ensure that map_vertex applies the function only once per vertex
fixes #110

--- a/tests/dune
+++ b/tests/dune
@@ -8,6 +8,11 @@
  (libraries graph)
  (modules test_topsort))
 
+(test
+ (name test_map_vertex)
+ (libraries graph)
+ (modules test_map_vertex))
+
 ;; Rules for the Bellman-Ford tests
 
 (rule
