--- a/ocamlgraph.opam
+++ b/ocamlgraph.opam
@@ -15,6 +15,7 @@ tags: [
   "imperative"
 ]
 homepage: "https://github.com/backtracking/ocamlgraph/"
+doc: "https://backtracking.github.io/ocamlgraph"
 bug-reports: "https://github.com/backtracking/ocamlgraph/issues/new"
 depends: [
   "ocaml" {>= "4.03.0"}
