ocamlgraph_gtk: fixed depends on ocamlgraph
added constraint >= 2.0.0

--- a/ocamlgraph_gtk.opam
+++ b/ocamlgraph_gtk.opam
@@ -22,7 +22,7 @@ depends: [
   "stdlib-shims"
   "lablgtk"
   "conf-gnomecanvas"
-  "ocamlgraph"
+  "ocamlgraph" {>= "2.0.0"}
   "dune" {>= "2.0"}
   "graphics" {with-test}
 ]
