--- a/tests/dune
+++ b/tests/dune
@@ -9,6 +9,11 @@
  (modules test_topsort))
 
 (test
+ (name test_check_path)
+ (libraries graph)
+ (modules test_check_path))
+
+(test
  (name test_map_vertex)
  (libraries graph)
  (modules test_map_vertex))
