fixed Dfs.fold and Dfs.fold_component
these were embarassingly not depth-first traversal
see https://11011110.github.io/blog/2013/12/17/stack-based-graph-traversal.html
for an explanation

--- a/tests/dune
+++ b/tests/dune
@@ -4,6 +4,11 @@
  (modules check))
 
 (test
+ (name test_dfs)
+ (libraries graph)
+ (modules test_dfs))
+
+(test
  (name test_topsort)
  (libraries graph)
  (modules test_topsort))
