--- a/ocamlgraph_gtk.opam
+++ b/ocamlgraph_gtk.opam
@@ -1,7 +1,7 @@
 opam-version: "2.0"
 synopsis: "Displaying graphs using OCamlGraph and GTK"
 description: "Displaying graphs using OCamlGraph and GTK"
-maintainer: ["filliatr@lri.fr"]
+maintainer: ["jean-christophe.filliatre@cnrs.fr"]
 authors: ["Sylvain Conchon" "Jean-Christophe Filliâtre" "Julien Signoles"]
 license: "LGPL-2.1-only"
 tags: [
