--- a/ocamlgraph_gtk.opam
+++ b/ocamlgraph_gtk.opam
@@ -27,7 +27,7 @@ depends: [
   "graphics" {with-test}
 ]
 build: [
-  ["dune" "subst"] {pinned}
+  ["dune" "subst"] {dev}
   [
     "dune"
     "build"
