--- a/tests/dune
+++ b/tests/dune
@@ -282,20 +282,18 @@
  (libraries graph))
 
 (rule
- (alias runtest)
+ (alias dot_parse)
  (deps
   (glob_files "../editor/tests/*.dot")
   (glob_files "../dgraph/examples/*.dot"))
  (action
   (ignore-stdout
-   (run ./dot_2.exe %{deps}))))
+   (run ./dot_parse.exe %{deps}))))
 
-(rule
- (alias runtest)
- (action
-  (progn
-   (diff dot_2.expected dot_2.output)
-   (echo "dot: all tests succeeded.\n"))))
+(executable
+ (name dot_parse)
+ (modules dot_parse)
+ (libraries graph))
 
 ;; rules for the running the benchmark
 
