Traverse.Bfs: traversal with distance from the source
two new functions {fold,iter}_component_dist to perform a breadth-first
search from a source, and visit each vertex with the distance from
the source

--- a/tests/dune
+++ b/tests/dune
@@ -4,6 +4,11 @@
  (modules check))
 
 (test
+ (name test_bfs)
+ (libraries graph)
+ (modules test_bfs))
+
+(test
  (name test_dfs)
  (libraries graph)
  (modules test_dfs))
