new module Search to solve one-player games
many one-player games can be seen as graphs, and then can be
solved using graph traversal algorithms such as DFS, BFS, etc.

--- a/tests/dune
+++ b/tests/dune
@@ -14,6 +14,11 @@
  (modules test_dfs))
 
 (test
+ (name test_search)
+ (libraries graph)
+ (modules test_search))
+
+(test
  (name test_topsort)
  (libraries graph)
  (modules test_topsort))
