--- a/examples/dune
+++ b/examples/dune
@@ -1,8 +1,9 @@
 (executables
- (names color compare_prim_kruskal demo_planar demo_prim demo sudoku)
+ (names color compare_prim_kruskal demo_planar demo_prim demo sudoku
+        show_search)
  (libraries graph unix graphics threads))
 
 (alias
  (name runtest)
  (deps color.exe compare_prim_kruskal.exe demo_planar.exe demo_prim.exe
-   demo.exe sudoku.exe))
+   demo.exe sudoku.exe show_search.exe))
