Classic: new functions kneser and petersen

--- a/tests/dune
+++ b/tests/dune
@@ -9,6 +9,11 @@
  (modules test_bfs))
 
 (test
+ (name test_classic)
+ (libraries graph)
+ (modules test_classic))
+
+(test
  (name test_dfs)
  (libraries graph)
  (modules test_dfs))
