Remove the useless dependency on stdlib-shims
ocamlgraph already requires OCaml >= 4.08 which makes stdlib-shims a no-op

--- a/dgraph/dune
+++ b/dgraph/dune
@@ -2,7 +2,7 @@
  (name graph_gtk)
  (public_name ocamlgraph_gtk)
  (modules :standard \ dGraphViewer)
- (libraries ocamlgraph stdlib-shims lablgtk2.gnomecanvas lablgtk2)
+ (libraries ocamlgraph lablgtk2.gnomecanvas lablgtk2)
  (flags -open Graph))
 
 (executable
